@@ -1,0 +1,5 @@
+/Build
+/MYMETA.*
+/_build
+/blib
+*.bak
