@@ -1,13 +1,17 @@
 Build.PL
 Changes
-MANIFEST
-README
 lib/Net/Route.pm
-lib/Net/Route/Parser/MSWin32.pm
+lib/Net/Route/Parser.pm
 lib/Net/Route/Parser/linux.pm
+lib/Net/Route/Parser/MSWin32.pm
 lib/Net/Route/Parser/solaris.pm
 lib/Net/Route/Table.pm
-lib/Net/Route/Parser.pm
+maint/cip-before-install
+Makefile.PL
+MANIFEST
+META.json
+META.yml
+README
 t/00-load.t
 t/02-perlcritic.t
 t/02-pod-coverage.t
@@ -16,7 +20,5 @@ t/20-exception.t
 t/50-integration.t
 t/bin/suicide.pl
 t/lib/Net/Route/Parser/Test.pm
-t/perltidyrc
 t/perlcriticrc
-Makefile.PL
-META.yml
+t/perltidyrc
