@@ -1,5 +1,8 @@
 Revision history for Net-Route
 
+  - Remove Makefile.PL (rt#132160, gh#1)
+  - Added Test::Exception as a test requires (rt#128971, gh#1)
+
 0.02    2009-11-23
         - Fixed a typo on MSWin32 that would render the module unusable
         - Moved secondary dependencies to recommendations
